Refactor: improve code clean