@@ -8,6 +8,8 @@ import com.lms.entity.*;
 import com.lms.enums.UserStatus;
 import com.lms.repository.*;
 import com.lms.service.BorrowService;
+import com.lms.exception.ResourceNotFoundException;
+import com.lms.exception.ValidationException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -20,6 +22,15 @@ import java.util.stream.Collectors;
 @Service
 public class BorrowServiceImpl implements BorrowService {
 
+    private static final String STATUS_AVAILABLE = "Available";
+    private static final String STATUS_BORROWED = "Borrowed";
+    private static final String STATUS_ACTIVE = "Active";
+    private static final String STATUS_PENDING = "Pending";
+    private static final String STATUS_RETURN_PENDING = "Return_Pending";
+    private static final String STATUS_RETURNED = "Returned";
+    private static final String STATUS_OVERDUE = "Overdue";
+    private static final String UNKNOWN_AUTHOR = "Chưa rõ tác giả";
+
     private final MemberRepository memberRepository;
     private final BookItemRepository bookItemRepository;
     private final BorrowRepository borrowRepository;
@@ -31,14 +42,14 @@ public class BorrowServiceImpl implements BorrowService {
     private final MemberNotificationRepository memberNotificationRepository;
 
     public BorrowServiceImpl(MemberRepository memberRepository,
-                             BookItemRepository bookItemRepository,
-                             BorrowRepository borrowRepository,
-                             BorrowDetailRepository borrowDetailRepository,
-                             BookRepository bookRepository,
-                             MemberAccountRepository memberAccountRepository,
-                             ReservationRepository reservationRepository,
-                             NotificationRepository notificationRepository,
-                             MemberNotificationRepository memberNotificationRepository) {
+            BookItemRepository bookItemRepository,
+            BorrowRepository borrowRepository,
+            BorrowDetailRepository borrowDetailRepository,
+            BookRepository bookRepository,
+            MemberAccountRepository memberAccountRepository,
+            ReservationRepository reservationRepository,
+            NotificationRepository notificationRepository,
+            MemberNotificationRepository memberNotificationRepository) {
         this.memberRepository = memberRepository;
         this.bookItemRepository = bookItemRepository;
         this.borrowRepository = borrowRepository;
@@ -56,26 +67,26 @@ public class BorrowServiceImpl implements BorrowService {
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public Borrow processBorrowing(BorrowRequest request, String librarianUsername) throws Exception {
+    public void processBorrowing(BorrowRequest request, String librarianUsername) {
         String identifier = request.getMemberIdentifier();
         Member member = memberRepository.findByUserEmail(identifier)
                 .orElseGet(() -> memberRepository.findByUserPhone(identifier).orElse(null));
-                
+
         if (member == null) {
-            throw new Exception("Không tìm thấy độc giả với email hoặc số điện thoại này!");
+            throw new ResourceNotFoundException("Không tìm thấy độc giả với email hoặc số điện thoại này!");
         }
 
         if (member.getUser() != null && member.getUser().getStatus() != UserStatus.Active) {
-            throw new Exception("Tài khoản thành viên này đang bị khóa hoặc chưa kích hoạt!");
+            throw new ValidationException("Tài khoản thành viên này đang bị khóa hoặc chưa kích hoạt!");
         }
 
         List<BookItem> bookItemsToBorrow = new ArrayList<>();
         for (String barcode : request.getBarcodes()) {
             BookItem item = bookItemRepository.findByBarcode(barcode)
-                    .orElseThrow(() -> new Exception("Mã vạch " + barcode + " không tồn tại!"));
+                    .orElseThrow(() -> new ResourceNotFoundException("Mã vạch " + barcode + " không tồn tại!"));
 
-            if (!"Available".equalsIgnoreCase(item.getStatus())) {
-                throw new Exception("Sách có mã vạch " + barcode + " hiện tại không sẵn sàng!");
+            if (!STATUS_AVAILABLE.equalsIgnoreCase(item.getStatus())) {
+                throw new ValidationException("Sách có mã vạch " + barcode + " hiện tại không sẵn sàng!");
             }
             bookItemsToBorrow.add(item);
         }
@@ -83,13 +94,13 @@ public class BorrowServiceImpl implements BorrowService {
         long currentBorrowCount = borrowDetailRepository.countActiveBorrowedBooks(member.getMemberId());
         int maxLimit = member.getTier() != null ? member.getTier().getBorrowLimit() : 3;
         if (currentBorrowCount + bookItemsToBorrow.size() > maxLimit) {
-            throw new Exception("Số lượng sách vượt quá giới hạn mượn của hạng thành viên!");
+            throw new ValidationException("Số lượng sách vượt quá giới hạn mượn của hạng thành viên!");
         }
 
         Borrow borrow = new Borrow();
         borrow.setMember(member);
         borrow.setBorrowDate(LocalDateTime.now());
-        borrow.setStatus("Active");
+        borrow.setStatus(STATUS_ACTIVE);
         borrow = borrowRepository.save(borrow);
 
         for (BookItem item : bookItemsToBorrow) {
@@ -98,35 +109,34 @@ public class BorrowServiceImpl implements BorrowService {
             detail.setBook(item.getBook());
             detail.setBookItem(item);
             detail.setDueDate(LocalDateTime.now().plusDays(14));
-            detail.setStatus("Borrowed");
+            detail.setStatus(STATUS_BORROWED);
             detail.setRenewCount(0);
             borrowDetailRepository.save(detail);
 
-            item.setStatus("Borrowed");
+            item.setStatus(STATUS_BORROWED);
             bookItemRepository.save(item);
         }
-        return borrow;
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public Borrow memberSubmitBorrowRequest(String username, Integer bookId, Integer numberOfDays) throws Exception {
+    public void memberSubmitBorrowRequest(String username, Integer bookId, Integer numberOfDays) {
         Member member = memberRepository.findByAccountUsername(username)
-                .orElseThrow(() -> new Exception("Không tìm thấy thông tin độc giả!"));
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy thông tin độc giả!"));
 
         Book book = bookRepository.findById(bookId)
-                .orElseThrow(() -> new Exception("Sách yêu cầu mượn không tồn tại!"));
+                .orElseThrow(() -> new ResourceNotFoundException("Sách yêu cầu mượn không tồn tại!"));
 
         long currentBorrowed = borrowDetailRepository.countActiveBorrowedBooks(member.getMemberId());
         int maxLimit = member.getTier() != null ? member.getTier().getBorrowLimit() : 3;
         if (currentBorrowed >= maxLimit) {
-            throw new Exception("Yêu cầu bị từ chối! Bạn đã mượn chạm giới hạn tối đa cho phép.");
+            throw new ValidationException("Yêu cầu bị từ chối! Bạn đã mượn chạm giới hạn tối đa cho phép.");
         }
 
         Borrow borrow = new Borrow();
         borrow.setMember(member);
         borrow.setBorrowDate(LocalDateTime.now());
-        borrow.setStatus("Pending");
+        borrow.setStatus(STATUS_PENDING);
         borrow = borrowRepository.save(borrow);
 
         BorrowDetail detail = new BorrowDetail();
@@ -134,28 +144,27 @@ public class BorrowServiceImpl implements BorrowService {
         detail.setBook(book);
         detail.setBookItem(null);
         detail.setDueDate(LocalDateTime.now().plusDays(numberOfDays != null ? numberOfDays : 14));
-        detail.setStatus("Pending");
+        detail.setStatus(STATUS_PENDING);
         detail.setRenewCount(0);
         borrowDetailRepository.save(detail);
 
-        return borrow;
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public void approvePendingRequest(Integer borrowId, String staffUsername) throws Exception {
+    public void approvePendingRequest(Integer borrowId, String staffUsername) {
         Borrow borrow = borrowRepository.findById(borrowId)
-                .orElseThrow(() -> new Exception("Không tìm thấy đơn yêu cầu mượn!"));
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy đơn yêu cầu mượn!"));
 
-        borrow.setStatus("Active");
+        borrow.setStatus(STATUS_ACTIVE);
         borrowRepository.save(borrow);
 
         List<BorrowDetail> details = borrowDetailRepository.findAll().stream()
                 .filter(d -> d.getBorrow() != null && d.getBorrow().getBorrowId().equals(borrowId))
-                .collect(Collectors.toList());
+                .toList();
 
         for (BorrowDetail detail : details) {
-            detail.setStatus("Borrowed");
+            detail.setStatus(STATUS_BORROWED);
             borrowDetailRepository.save(detail);
         }
     }
@@ -166,46 +175,47 @@ public class BorrowServiceImpl implements BorrowService {
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public void memberSubmitReturnRequest(String username, Integer borrowDetailId) throws Exception {
-        Member member = memberRepository.findByAccountUsername(username)
-                .orElseThrow(() -> new Exception("Độc giả không tồn tại!"));
+    public void memberSubmitReturnRequest(String username, Integer borrowDetailId) {
+        memberRepository.findByAccountUsername(username)
+                .orElseThrow(() -> new ResourceNotFoundException("Độc giả không tồn tại!"));
 
         BorrowDetail detail = borrowDetailRepository.findById(borrowDetailId)
-                .orElseThrow(() -> new Exception("Không tìm thấy chi tiết phiếu mượn tương ứng!"));
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy chi tiết phiếu mượn tương ứng!"));
 
-        if (!"Borrowed".equalsIgnoreCase(detail.getStatus()) && !"Overdue".equalsIgnoreCase(detail.getStatus())) {
-            throw new Exception("Trạng thái sách hiện tại không hợp lệ để gửi yêu cầu trả!");
+        if (!STATUS_BORROWED.equalsIgnoreCase(detail.getStatus())
+                && !STATUS_OVERDUE.equalsIgnoreCase(detail.getStatus())) {
+            throw new ValidationException("Trạng thái sách hiện tại không hợp lệ để gửi yêu cầu trả!");
         }
 
-        detail.setStatus("Return_Pending");
+        detail.setStatus(STATUS_RETURN_PENDING);
         borrowDetailRepository.save(detail);
 
         Borrow parent = detail.getBorrow();
-        parent.setStatus("Return_Pending");
+        parent.setStatus(STATUS_RETURN_PENDING);
         borrowRepository.save(parent);
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public void approveReturnRequest(Integer borrowId) throws Exception {
+    public void approveReturnRequest(Integer borrowId) {
         Borrow borrow = borrowRepository.findById(borrowId)
-                .orElseThrow(() -> new Exception("Không tìm thấy đơn yêu cầu trả!"));
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy đơn yêu cầu trả!"));
 
-        borrow.setStatus("Returned");
+        borrow.setStatus(STATUS_RETURNED);
         borrowRepository.save(borrow);
 
         List<BorrowDetail> details = borrowDetailRepository.findAll().stream()
                 .filter(d -> d.getBorrow() != null && d.getBorrow().getBorrowId().equals(borrowId))
-                .collect(Collectors.toList());
+                .toList();
 
         for (BorrowDetail detail : details) {
-            detail.setStatus("Returned");
+            detail.setStatus(STATUS_RETURNED);
             detail.setReturnDate(LocalDateTime.now());
             borrowDetailRepository.save(detail);
 
             if (detail.getBookItem() != null) {
                 BookItem item = detail.getBookItem();
-                item.setStatus("Available");
+                item.setStatus(STATUS_AVAILABLE);
                 bookItemRepository.save(item);
             }
         }
@@ -216,25 +226,28 @@ public class BorrowServiceImpl implements BorrowService {
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public void processReturnBook(String barcode) throws Exception {
+    public void processReturnBook(String barcode) {
         BookItem item = bookItemRepository.findByBarcode(barcode)
-                .orElseThrow(() -> new Exception("Mã vạch sách vật lý không tồn tại!"));
+                .orElseThrow(() -> new ResourceNotFoundException("Mã vạch sách vật lý không tồn tại!"));
 
         BorrowDetail activeDetail = borrowDetailRepository.findAll().stream()
                 .filter(d -> d.getBookItem() != null && d.getBookItem().getBookItemId().equals(item.getBookItemId())
-                        && ("Borrowed".equalsIgnoreCase(d.getStatus()) || "Overdue".equalsIgnoreCase(d.getStatus()) || "Return_Pending".equalsIgnoreCase(d.getStatus())))
+                        && (STATUS_BORROWED.equalsIgnoreCase(d.getStatus())
+                                || STATUS_OVERDUE.equalsIgnoreCase(d.getStatus())
+                                || STATUS_RETURN_PENDING.equalsIgnoreCase(d.getStatus())))
                 .findFirst()
-                .orElseThrow(() -> new Exception("Không tìm thấy lịch sử mượn hợp lệ ứng với mã vạch sách này!"));
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        "Không tìm thấy lịch sử mượn hợp lệ ứng với mã vạch sách này!"));
 
-        item.setStatus("Available");
+        item.setStatus(STATUS_AVAILABLE);
         bookItemRepository.save(item);
 
         activeDetail.setReturnDate(LocalDateTime.now());
-        activeDetail.setStatus("Returned");
+        activeDetail.setStatus(STATUS_RETURNED);
         borrowDetailRepository.save(activeDetail);
 
         Borrow parent = activeDetail.getBorrow();
-        parent.setStatus("Returned");
+        parent.setStatus(STATUS_RETURNED);
         borrowRepository.save(parent);
     }
 
@@ -242,7 +255,7 @@ public class BorrowServiceImpl implements BorrowService {
     @Override
     @Transactional(readOnly = true)
     public List<ReturnRequestDTO> getPendingReturnRequestDTOs() {
-        List<BorrowDetail> details = borrowDetailRepository.findByStatus("Return_Pending");
+        List<BorrowDetail> details = borrowDetailRepository.findByStatus(STATUS_RETURN_PENDING);
         return details.stream().map(bd -> {
             Member member = bd.getBorrow().getMember();
             String name = (member != null && member.getUser() != null) ? member.getUser().getFullName() : "N/A";
@@ -254,9 +267,8 @@ public class BorrowServiceImpl implements BorrowService {
                     email,
                     bd.getBook().getTitle(),
                     bd.getBookItem() != null ? bd.getBookItem().getBarcode() : "N/A",
-                    bd.getBorrow().getBorrowDate()
-            );
-        }).collect(Collectors.toList());
+                    bd.getBorrow().getBorrowDate());
+        }).toList();
     }
 
     // ==========================================
@@ -265,54 +277,58 @@ public class BorrowServiceImpl implements BorrowService {
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public Reservation memberSubmitReservationRequest(String username, Integer bookId) throws Exception {
+    public void memberSubmitReservationRequest(String username, Integer bookId) {
         Member member = memberRepository.findByAccountUsername(username)
-                .orElseThrow(() -> new Exception("Tài khoản độc giả không tồn tại!"));
+                .orElseThrow(() -> new ResourceNotFoundException("Tài khoản độc giả không tồn tại!"));
 
         Book book = bookRepository.findById(bookId)
-                .orElseThrow(() -> new Exception("Sách yêu cầu đặt giữ không tồn tại!"));
+                .orElseThrow(() -> new ResourceNotFoundException("Sách yêu cầu đặt giữ không tồn tại!"));
 
-        boolean alreadyReserved = reservationRepository.findByMember_MemberIdOrderByReservationDateDesc(member.getMemberId())
-                .stream().anyMatch(r -> r.getBook().getBookId().equals(bookId) && "Pending".equalsIgnoreCase(r.getStatus()));
+        boolean alreadyReserved = reservationRepository
+                .findByMember_MemberIdOrderByReservationDateDesc(member.getMemberId())
+                .stream()
+                .anyMatch(
+                        r -> r.getBook().getBookId().equals(bookId) && STATUS_PENDING.equalsIgnoreCase(r.getStatus()));
         if (alreadyReserved) {
-            throw new Exception("Bạn đã có một yêu cầu đặt trước cuốn sách này và đang chờ duyệt!");
+            throw new ValidationException("Bạn đã có một yêu cầu đặt trước cuốn sách này và đang chờ duyệt!");
         }
 
         Reservation reservation = new Reservation();
         reservation.setMember(member);
         reservation.setBook(book);
         reservation.setReservationDate(LocalDateTime.now());
-        reservation.setStatus("Pending");
-        return reservationRepository.save(reservation);
+        reservation.setStatus(STATUS_PENDING);
+        reservationRepository.save(reservation);
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public void approveReservationRequest(Integer reservationId, String staffUsername) throws Exception {
+    public void approveReservationRequest(Integer reservationId, String staffUsername) {
         Reservation reservation = reservationRepository.findById(reservationId)
-                .orElseThrow(() -> new Exception("Không tìm thấy đơn yêu cầu đặt trước!"));
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy đơn yêu cầu đặt trước!"));
 
-        if (!"Pending".equalsIgnoreCase(reservation.getStatus())) {
-            throw new Exception("Đơn đặt trước này đã được xử lý từ trước!");
+        if (!STATUS_PENDING.equalsIgnoreCase(reservation.getStatus())) {
+            throw new ValidationException("Đơn đặt trước này đã được xử lý từ trước!");
         }
 
-        reservation.setStatus("Active");
+        reservation.setStatus(STATUS_ACTIVE);
         reservationRepository.save(reservation);
 
         sendInternalNotification(reservation.getMember(), "Yêu cầu đặt trước được phê duyệt",
-                "Cuốn sách '" + reservation.getBook().getTitle() + "' đã được đặt giữ thành công. Vui lòng đến nhận trong vòng 3 ngày.");
+                "Cuốn sách '" + reservation.getBook().getTitle()
+                        + "' đã được đặt giữ thành công. Vui lòng đến nhận trong vòng 3 ngày.");
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public void memberCancelReservation(String username, Integer reservationId) throws Exception {
+    public void memberCancelReservation(String username, Integer reservationId) {
         Reservation reservation = reservationRepository.findById(reservationId)
-                .orElseThrow(() -> new Exception("Đơn đặt trước không tồn tại!"));
+                .orElseThrow(() -> new ResourceNotFoundException("Đơn đặt trước không tồn tại!"));
 
         Integer currentMemberId = getMemberIdByUsername(username);
 
-        if (currentMemberId == null || !reservation.getMember().getMemberId().equals(currentMemberId)) {
-            throw new Exception("Bạn không có quyền hủy đơn đặt trước của người khác!");
+        if (!reservation.getMember().getMemberId().equals(currentMemberId)) {
+            throw new ValidationException("Bạn không có quyền hủy đơn đặt trước của người khác!");
         }
 
         reservation.setStatus("Canceled");
@@ -323,17 +339,18 @@ public class BorrowServiceImpl implements BorrowService {
     @Transactional(readOnly = true)
     public List<Reservation> getAllPendingReservations() {
         return reservationRepository.findAll().stream()
-                .filter(r -> "Pending".equalsIgnoreCase(r.getStatus()))
-                .collect(Collectors.toList());
+                .filter(r -> STATUS_PENDING.equalsIgnoreCase(r.getStatus()))
+                .toList();
     }
 
-    // FIX LỖI DÒNG 328-331 TRONG HÌNH: Sửa lỗi lấy FullName qua User và gán cứng hàng đợi mặc định nếu entity thiếu trường
+    // FIX LỖI DÒNG 328-331 TRONG HÌNH: Sửa lỗi lấy FullName qua User và gán cứng
+    // hàng đợi mặc định nếu entity thiếu trường
     @Override
     @Transactional(readOnly = true)
     public List<ReservationRequestDTO> getPendingReservationDTOs() {
         List<Reservation> reservations = reservationRepository.findAll().stream()
-                .filter(r -> "Pending".equalsIgnoreCase(r.getStatus()))
-                .collect(Collectors.toList());
+                .filter(r -> STATUS_PENDING.equalsIgnoreCase(r.getStatus()))
+                .toList();
         return reservations.stream().map(r -> {
             Member member = r.getMember();
             String name = (member != null && member.getUser() != null) ? member.getUser().getFullName() : "N/A";
@@ -343,9 +360,10 @@ public class BorrowServiceImpl implements BorrowService {
                     name,
                     r.getBook().getTitle(),
                     r.getReservationDate(),
-                    1 // Vì Entity Reservation không định nghĩa queuePosition, gán cứng giá trị an toàn '1' để tránh lỗi compile
+                    1 // Vì Entity Reservation không định nghĩa queuePosition, gán cứng giá trị an
+                      // toàn '1' để tránh lỗi compile
             );
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     // ==========================================
@@ -356,26 +374,19 @@ public class BorrowServiceImpl implements BorrowService {
     @Transactional(readOnly = true)
     public List<MemberBorrowDTO> getMemberCurrentBorrows(String username) {
         Integer memberId = getMemberIdByUsername(username);
-        if (memberId == null) return new ArrayList<>();
+        if (memberId == null)
+            return new ArrayList<>();
 
         List<BorrowDetail> details = borrowDetailRepository.findCurrentBorrowsByMemberId(memberId).stream()
-                .filter(d -> "Pending".equalsIgnoreCase(d.getStatus())
-                        || "Borrowed".equalsIgnoreCase(d.getStatus())
-                        || "Overdue".equalsIgnoreCase(d.getStatus())
-                        || "Return_Pending".equalsIgnoreCase(d.getStatus()))
-                .collect(Collectors.toList());
+                .filter(d -> STATUS_PENDING.equalsIgnoreCase(d.getStatus())
+                        || STATUS_BORROWED.equalsIgnoreCase(d.getStatus())
+                        || STATUS_OVERDUE.equalsIgnoreCase(d.getStatus())
+                        || STATUS_RETURN_PENDING.equalsIgnoreCase(d.getStatus()))
+                .toList();
 
         List<MemberBorrowDTO> dtoList = new ArrayList<>();
         for (BorrowDetail detail : details) {
-            MemberBorrowDTO dto = new MemberBorrowDTO();
-            dto.setId(detail.getBorrowDetailId());
-            dto.setBookTitle(detail.getBook().getTitle());
-            dto.setAuthorName(detail.getBook().getAuthors() != null && !detail.getBook().getAuthors().isEmpty() ?
-                    detail.getBook().getAuthors().stream().map(Author::getAuthorName).collect(Collectors.joining(", ")) : "Chưa rõ tác giả");
-            dto.setBookIdStr(detail.getBookItem() != null ? detail.getBookItem().getBarcode() : "BK-" + detail.getBook().getBookId());
-            dto.setActionDate(detail.getBorrow().getBorrowDate());
-            dto.setDueDate(detail.getDueDate());
-            dto.setStatus(detail.getStatus());
+            MemberBorrowDTO dto = mapToMemberBorrowDTO(detail);
 
             if (detail.getBorrow().getBorrowDate() != null && detail.getDueDate() != null) {
                 long totalDays = ChronoUnit.DAYS.between(detail.getBorrow().getBorrowDate(), detail.getDueDate());
@@ -395,19 +406,21 @@ public class BorrowServiceImpl implements BorrowService {
     @Transactional(readOnly = true)
     public List<MemberBorrowDTO> getMemberReservations(String username) {
         Integer memberId = getMemberIdByUsername(username);
-        if (memberId == null) return new ArrayList<>();
+        if (memberId == null)
+            return new ArrayList<>();
 
-        List<Reservation> reservations = reservationRepository.findByMember_MemberIdOrderByReservationDateDesc(memberId).stream()
-                .filter(r -> "Pending".equalsIgnoreCase(r.getStatus()) || "Active".equalsIgnoreCase(r.getStatus()))
-                .collect(Collectors.toList());
+        List<Reservation> reservations = reservationRepository.findByMember_MemberIdOrderByReservationDateDesc(memberId)
+                .stream()
+                .filter(r -> STATUS_PENDING.equalsIgnoreCase(r.getStatus())
+                        || STATUS_ACTIVE.equalsIgnoreCase(r.getStatus()))
+                .toList();
 
         List<MemberBorrowDTO> dtoList = new ArrayList<>();
         for (Reservation res : reservations) {
             MemberBorrowDTO dto = new MemberBorrowDTO();
             dto.setId(res.getReservationId());
             dto.setBookTitle(res.getBook().getTitle());
-            dto.setAuthorName(res.getBook().getAuthors() != null && !res.getBook().getAuthors().isEmpty() ?
-                    res.getBook().getAuthors().stream().map(Author::getAuthorName).collect(Collectors.joining(", ")) : "Chưa rõ tác giả");
+            dto.setAuthorName(getAuthorNames(res.getBook()));
             dto.setBookIdStr("RES-" + res.getBook().getBookId());
             dto.setActionDate(res.getReservationDate());
             dto.setDueDate(res.getReservationDate().plusDays(3));
@@ -421,43 +434,114 @@ public class BorrowServiceImpl implements BorrowService {
     @Transactional(readOnly = true)
     public List<MemberBorrowDTO> getMemberOneMonthHistory(String username) {
         Integer memberId = getMemberIdByUsername(username);
-        if (memberId == null) return new ArrayList<>();
+        if (memberId == null)
+            return new ArrayList<>();
 
         LocalDateTime oneMonthAgo = LocalDateTime.now().minusMonths(1);
         List<BorrowDetail> details = borrowDetailRepository.findBorrowHistoryInOneMonth(memberId, oneMonthAgo).stream()
-                .filter(d -> "Returned".equalsIgnoreCase(d.getStatus()))
-                .collect(Collectors.toList());
+                .filter(d -> STATUS_RETURNED.equalsIgnoreCase(d.getStatus()))
+                .toList();
 
         List<MemberBorrowDTO> dtoList = new ArrayList<>();
         for (BorrowDetail detail : details) {
-            MemberBorrowDTO dto = new MemberBorrowDTO();
-            dto.setId(detail.getBorrowDetailId());
-            dto.setBookTitle(detail.getBook().getTitle());
-            dto.setAuthorName(detail.getBook().getAuthors() != null && !detail.getBook().getAuthors().isEmpty() ?
-                    detail.getBook().getAuthors().stream().map(Author::getAuthorName).collect(Collectors.joining(", ")) : "Chưa rõ tác giả");
-            dto.setBookIdStr(detail.getBookItem() != null ? detail.getBookItem().getBarcode() : "BK-" + detail.getBook().getBookId());
-            dto.setActionDate(detail.getBorrow().getBorrowDate());
+            MemberBorrowDTO dto = mapToMemberBorrowDTO(detail);
             dto.setReturnDate(detail.getReturnDate());
-            dto.setStatus(detail.getStatus());
             dtoList.add(dto);
         }
         return dtoList;
     }
 
     // ==========================================
+    private MemberBorrowDTO mapToMemberBorrowDTO(BorrowDetail detail) {
+        MemberBorrowDTO dto = new MemberBorrowDTO();
+        dto.setId(detail.getBorrowDetailId());
+        dto.setBookTitle(detail.getBook().getTitle());
+        dto.setAuthorName(getAuthorNames(detail.getBook()));
+        dto.setBookIdStr(detail.getBookItem() != null ? detail.getBookItem().getBarcode()
+                : "BK-" + detail.getBook().getBookId());
+        dto.setActionDate(detail.getBorrow().getBorrowDate());
+        dto.setStatus(detail.getStatus());
+        return dto;
+    }
+
+    private String getAuthorNames(Book book) {
+        return book.getAuthors() != null && !book.getAuthors().isEmpty()
+                ? book.getAuthors().stream().map(Author::getAuthorName).collect(Collectors.joining(", "))
+                : UNKNOWN_AUTHOR;
+    }
+
     // CÁC PHƯƠNG THỨC TRUY VẤN BỔ TRỢ KHÁC
     // ==========================================
-    @Override @Transactional(readOnly = true) public List<Borrow> getAllPendingRequests() { return borrowRepository.findAll().stream().filter(b -> "Pending".equalsIgnoreCase(b.getStatus())).collect(Collectors.toList()); }
-    @Override @Transactional(readOnly = true) public List<Borrow> getAllReturnRequests() { return borrowRepository.findAll().stream().filter(b -> "Return_Pending".equalsIgnoreCase(b.getStatus())).collect(Collectors.toList()); }
-    @Override @Transactional(readOnly = true) public List<Borrow> getAllActiveLoans() { return borrowRepository.findAll().stream().filter(b -> "Active".equalsIgnoreCase(b.getStatus()) || "Borrowing".equalsIgnoreCase(b.getStatus())).collect(Collectors.toList()); }
-    @Override @Transactional(readOnly = true) public List<Borrow> getBorrowsByMemberAndStatus(String username, String status) { Integer id = getMemberIdByUsername(username); return id == null ? new ArrayList<>() : borrowRepository.findAll().stream().filter(b -> b.getMember() != null && id.equals(b.getMember().getMemberId()) && status.equalsIgnoreCase(b.getStatus())).collect(Collectors.toList()); }
-    @Override @Transactional(readOnly = true) public List<Borrow> getAllBorrowHistoryByMember(String username) { Integer id = getMemberIdByUsername(username); return id == null ? new ArrayList<>() : borrowRepository.findAll().stream().filter(b -> b.getMember() != null && id.equals(b.getMember().getMemberId())).collect(Collectors.toList()); }
-    @Override @Transactional(readOnly = true) public Borrow getBorrowById(Integer id) throws Exception { return borrowRepository.findById(id).orElseThrow(() -> new Exception("Không tìm thấy đơn mượn!")); }
-    @Override @Transactional(readOnly = true) public List<BorrowDetail> getBorrowDetailsByBorrowId(Integer id) { return borrowDetailRepository.findAll().stream().filter(d -> d.getBorrow() != null && d.getBorrow().getBorrowId().equals(id)).collect(Collectors.toList()); }
-    @Override @Transactional(rollbackFor = Exception.class) public void updateStatus(Integer id, String status) throws Exception { Borrow b = borrowRepository.findById(id).orElseThrow(() -> new Exception("Không tìm thấy đơn mượn!")); b.setStatus(status); borrowRepository.save(b); }
+    @Override
+    @Transactional(readOnly = true)
+    public List<Borrow> getAllPendingRequests() {
+        return borrowRepository.findAll().stream().filter(b -> STATUS_PENDING.equalsIgnoreCase(b.getStatus()))
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<Borrow> getAllReturnRequests() {
+        return borrowRepository.findAll().stream().filter(b -> STATUS_RETURN_PENDING.equalsIgnoreCase(b.getStatus()))
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<Borrow> getAllActiveLoans() {
+        return borrowRepository.findAll().stream()
+                .filter(b -> STATUS_ACTIVE.equalsIgnoreCase(b.getStatus())
+                        || "Borrowing".equalsIgnoreCase(b.getStatus()))
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<Borrow> getBorrowsByMemberAndStatus(String username, String status) {
+        Integer id = getMemberIdByUsername(username);
+        return id == null ? new ArrayList<>()
+                : borrowRepository.findAll().stream().filter(b -> b.getMember() != null
+                        && id.equals(b.getMember().getMemberId()) && status.equalsIgnoreCase(b.getStatus()))
+                        .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<Borrow> getAllBorrowHistoryByMember(String username) {
+        Integer id = getMemberIdByUsername(username);
+        return id == null ? new ArrayList<>()
+                : borrowRepository.findAll().stream()
+                        .filter(b -> b.getMember() != null && id.equals(b.getMember().getMemberId()))
+                        .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public Borrow getBorrowById(Integer id) {
+        return borrowRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy đơn mượn!"));
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<BorrowDetail> getBorrowDetailsByBorrowId(Integer id) {
+        return borrowDetailRepository.findAll().stream()
+                .filter(d -> d.getBorrow() != null && d.getBorrow().getBorrowId().equals(id))
+                .toList();
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public void updateStatus(Integer id, String status) {
+        Borrow b = borrowRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy đơn mượn!"));
+        b.setStatus(status);
+        borrowRepository.save(b);
+    }
 
     private Integer getMemberIdByUsername(String username) {
-        return memberAccountRepository.findByUsername(username).map(MemberAccount::getMember).map(Member::getMemberId).orElse(null);
+        return memberAccountRepository.findByUsername(username).map(MemberAccount::getMember).map(Member::getMemberId)
+                .orElse(null);
     }
 
     private void sendInternalNotification(Member member, String title, String content) {
@@ -465,7 +549,7 @@ public class BorrowServiceImpl implements BorrowService {
         notif.setTitle(title);
         notif.setContent(content);
         notif.setCreatedDate(LocalDateTime.now());
-        notif.setStatus("Active");
+        notif.setStatus(STATUS_ACTIVE);
         Notification saved = notificationRepository.save(notif);
 
         MemberNotification mn = new MemberNotification();
